--- a/styles/albuns.css
+++ b/styles/albuns.css
@@ -20,7 +20,7 @@
     align-items: center;
 }
 main h1{
-    padding: 70px;
+    padding: 30px;
     font-size: 54px;
     color: #5f3473;
 }
@@ -42,8 +42,10 @@ table{
     font-family: arial, sans-serif;
     width: 100%;
     height: 100%;
-    border: 1px solid rgba(92, 92, 92, 0.774);
-    border-radius: 20px;
+    border-collapse: separate;
+    border-spacing: 8px;
+    border-radius: 10px;
+    border: 1px solid rgba(0, 0, 0, 0.246);
 
 }
 .id-album{
@@ -55,7 +57,13 @@ caption{
 }
 
 td{
-    padding: 30px;
-    border-bottom:1px solid rgba(92, 92, 92, 0.774) ;
+   
     text-align: left;
+}
+table img{
+    width: 300px;
+    height: 300px;
+}
+.album{
+    border-bottom: 1px solid rgba(0, 0, 0, 0.246);
 }
